--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
                 </div>
                 <div class="col-md-6">
                     <h4>MajorSoftware</h4>
-                    <ul>
-                        <li>Working on a web application for selling furniture using PHP, CodeIgniter framework.</li>
-                        <li>Getting to know the CMS, with Joomla and Wordpress</li>
-                    </ul>
+                
+                       Working on a web application for selling furniture using PHP, CodeIgniter framework.</br>
+                    Getting to know the CMS, with Joomla and Wordpress
+                  
 
                 </div>
             </div>
